--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="section">
       <div class="section-title">LinkedIn</div>
-      <p><a href="#">Coming Soon</a></p>
+      <p><a href="#">https://www.linkedin.com/in/brian-mwendwa-917b4b337/</a></p>
     </div>
   </div>
 </body>
